[Refactor] 클린코드 참고하여 수정